Add c:\\temp\\json.json to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ src/.DS_Store
 src/resources/.DS_Store
 src/pagecontent/.DS_Store
 .DS_Store
+c:\\temp\\json.json
 
 # Altova files #
 ################
