--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ src/resources/.DS_Store
 src/pagecontent/.DS_Store
 .DS_Store
 c:\\temp\\json.json
+src-generated/org.hl7.fhir.igpublisher.jar
 
 # Altova files #
 ################
