--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,12 @@ src/resources/.DS_Store
 src/pagecontent/.DS_Store
 .DS_Store
 c:\\temp\\json.json
-src-generated/org.hl7.fhir.igpublisher.jar
+/src-generated/org.hl7.fhir.igpublisher.jar
+website
+/src-generated/resources/ig-new.xml
+/src-generated/resources/ig-validation-parameters.json
+/src-generated/resources/ig-expansion-parameters.json
+/src-generated/resources/ig-new.json
 
 # Altova files #
 ################
