--- a/ig.ini
+++ b/ig.ini
@@ -3,7 +3,7 @@
 # see comments below for instructions
 
 ig = input/livd.xml
-template = hl7.fhir.template
+template = hl7.fhir.template#current
 
 
 
