--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -2,7 +2,7 @@ canonical: http://hl7.org/fhir/uv/livd
 fhirVersion: 4.0.1
 id: hl7.fhir.uv.livd
 name: LoincIvdTestCodeMapping
-status: draft
-version: 0.3.0
+status: active
+version: 1.0.0-ballot
 copyrightYear: 2020+
-releaseLabel: STU1
+releaseLabel: ballot
