--- a/input/vocabulary/valueset-testcode-mappings-livd.json
+++ b/input/vocabulary/valueset-testcode-mappings-livd.json
@@ -11,7 +11,7 @@
     "name": "LivdTestCodeMappingsVS",
     "title": "Test code mappings value set for LIVD",
     "status": "draft",
-    "experimental": "false",
+    "experimental": false,
     "date": "2018-09-25",
     "description": "Includes the subset of LOINC codes for mappings from manufacturer IVD test codes that are relevant for this ConceptMap.",
     "jurisdiction": [
