FHIR-49874 - Update value set status to active and for Jira ensure that artifact titles are unique.

--- a/input/vocabulary/valueset-testcode-mappings-livd.json
+++ b/input/vocabulary/valueset-testcode-mappings-livd.json
@@ -10,7 +10,7 @@
     "version": "1.0.0",
     "name": "LivdTestCodeMappingsVS",
     "title": "Test code mappings value set for LIVD",
-    "status": "draft",
+    "status": "active",
     "experimental": false,
     "date": "2018-09-25",
     "description": "Includes the subset of LOINC codes for mappings from manufacturer IVD test codes that are relevant for this ConceptMap.",
