--- a/ig.ini
+++ b/ig.ini
@@ -2,7 +2,7 @@
 # ini file for the Implementation Guide publisher
 # see comments below for instructions
 
-ig = input/livd.xml
+ig = fsh-generated/resources/ImplementationGuide-hl7.fhir.uv.livd.json
 template = hl7.fhir.template#current
 
 
