Fix misspelling in LOINC code 14744-7 "Glucose [Moles/volume] in Cerebral spinal fluid" display name.

--- a/input/vocabulary/valueset-testcode-mappings-livd.json
+++ b/input/vocabulary/valueset-testcode-mappings-livd.json
@@ -45,7 +45,7 @@
                     },
                     {
                         "code": "14744-7",
-                        "display": "Glucose [Moles/volume] in Cerbral spinal fluid"
+                        "display": "Glucose [Moles/volume] in Cerebral spinal fluid"
                     },
                     {
                         "code": "2342-4",
