FHIR-43822 Changing the Device Extension name. id and url

--- a/oids.ini
+++ b/oids.ini
@@ -31,7 +31,7 @@ catalog-uv-livd = 2.16.840.1.113883.4.642.40.51.42.2
 conceptmap-testcode-uv-livd = 2.16.840.1.113883.4.642.40.51.42.3
 devicedefinition-uv-livd = 2.16.840.1.113883.4.642.40.51.42.4
 ext-analyte = 2.16.840.1.113883.4.642.40.51.42.5
-ext-device = 2.16.840.1.113883.4.642.40.51.42.6
+ext-livd-devicedefinition = 2.16.840.1.113883.4.642.40.51.42.6
 ext-region = 2.16.840.1.113883.4.642.40.51.42.7
 ext-vendorReferenceIdentifier = 2.16.840.1.113883.4.642.40.51.42.8
 observationdefinition-uv-livd = 2.16.840.1.113883.4.642.40.51.42.9
